--- a/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/toolbar.less
+++ b/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/toolbar.less
@@ -48,14 +48,12 @@
 }
 @media (max-width: 767px) {
   .toolbar .breadcrumb {
-    color:#fff;
     text-shadow:none;
     .home {
-      display:none;
+      display: none;
     }
     a {
-      color:#fff;
-      text-shadow:none;
+      text-shadow: none;
     }
   }
 }
